--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,19 @@
     </style>
 
     <style name="Theme.UAS_TravelApp" parent="Base.Theme.UAS_TravelApp" />
+
+    <style name="Rounded.Button" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/rounded_button</item>
+        <!--        <item name="android:backgroundTint">#777777</item>-->
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="fontFamily">@font/poppins</item>
+    </style>
+
+    <style name="BottomNav">
+        <item name="itemIconTint">@color/bottom_nav_selector</item>
+        <item name="itemTextColor">@color/bottom_nav_selector</item>
+    </style>
 </resources>
